--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,21 +11,23 @@ nav:
     - 'Home' : 'gameplay-ingredients/index.md'
     - 'Runtime Tools' : 
       - 'Events, Logic and Actions' : 'gameplay-ingredients/events-logic-actions.md'
-      - 'Rigs' : 'gameplay-ingredients/rigs.md'
       - 'Managers' : 'gameplay-ingredients/managers.md'
+      - 'Rigs' : 'gameplay-ingredients/rigs.md'
+      - 'State Machines' : 'gameplay-ingredients/state-machines.md'
       - 'Factories' : 'gameplay-ingredients/factories.md'
+      - 'Timers' : 'gameplay-ingredients/timers.md'
       - 'Global Variables' : 'gameplay-ingredients/globals.md'
       - 'Interactive' : 'gameplay-ingredients/interactive.md'
-      - 'Timers' : 'gameplay-ingredients/timers.md'
+      - 'Gameplay Ingredients Settings' : 'gameplay-ingredients/settings.md'
     - 'Editor Tools' : 
       - 'Welcome Screen' : 'gameplay-ingredients/welcome-screen.md'
       - 'Play From Here' : 'gameplay-ingredients/play-from-here.md'
-      - 'Scene POV' : 'gameplay-ingredients/scene-pov.md'
-      - 'Link Game View' : 'gameplay-ingredients/link-game-view.md'
-      - 'Callable Trre Explorer' : 'gameplay-ingredients/callable-tree-explorer.md'
       - 'Hierarchy Hints' : 'gameplay-ingredients/hierarchy-hints.md'
-      - 'Find and Replace' : 'gameplay-ingredients/find-and-replace.md'
-      - 'New Scene from Template' : 'gameplay-ingredients/new-scene-from-template.md'
+      - 'Link Game View' : 'gameplay-ingredients/link-game-view.md'
+      - 'Scene Point of Views' : 'gameplay-ingredients/scene-pov.md'
       - 'Scene Setups' : 'gameplay-ingredients/scene-setups.md'
+      - 'New Scene from Template' : 'gameplay-ingredients/new-scene-from-template.md'
+      - 'Find and Replace' : 'gameplay-ingredients/find-and-replace.md'
+      - 'Callable Tree Explorer' : 'gameplay-ingredients/callable-tree-explorer.md'
       - 'Discover' : 'gameplay-ingredients/discover.md'
       - 'Other' : 'gameplay-ingredients/editor-other.md'
